@@ -1,6 +1,7 @@
 version 2.0-beta2 XX-Dec-2011
 . [FIX] EaseActions: EaseIn/EaseOut actions support float arguments
 . [FIX] Test: ShaderTest works (issue #1283)
+. [FIX] Texture2D: Uses CGImageRef instead of UIKit for iOS API
 
 version 2.0-beta 27-Nov-2011
 . [NEW] All: forward-ported changes from v1.1 branch:
